aws-ksm-sdk/cdk.out/vpc.template.json
{
 "Resources": {
  "Vpc01F824461A": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc/Vpc01"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/Resource"
   }
  },
  "Vpc01PublicSubnet1Subnet52644D7B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc01F824461A"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "vpc/Vpc01/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PublicSubnet1/Subnet"
   }
  },
  "Vpc01PublicSubnet1RouteTable902FF084": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc01F824461A"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc/Vpc01/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PublicSubnet1/RouteTable"
   }
  },
  "Vpc01PublicSubnet1RouteTableAssociationF05BA358": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "Vpc01PublicSubnet1RouteTable902FF084"
    },
    "SubnetId": {
     "Ref": "Vpc01PublicSubnet1Subnet52644D7B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PublicSubnet1/RouteTableAssociation"
   }
  },
  "Vpc01PublicSubnet1DefaultRoute0A463A3C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "Vpc01PublicSubnet1RouteTable902FF084"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "Vpc01IGWE5584F53"
    }
   },
   "DependsOn": [
    "Vpc01VPCGWF44E95B8"
   ],
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PublicSubnet1/DefaultRoute"
   }
  },
  "Vpc01PublicSubnet1EIPADD671CF": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc/Vpc01/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PublicSubnet1/EIP"
   }
  },
  "Vpc01PublicSubnet1NATGatewayEDCD7D54": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "Vpc01PublicSubnet1Subnet52644D7B"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "Vpc01PublicSubnet1EIPADD671CF",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc/Vpc01/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "Vpc01PublicSubnet1DefaultRoute0A463A3C",
    "Vpc01PublicSubnet1RouteTableAssociationF05BA358"
   ],
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PublicSubnet1/NATGateway"
   }
  },
  "Vpc01PublicSubnet2Subnet7A06BCF4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc01F824461A"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "vpc/Vpc01/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PublicSubnet2/Subnet"
   }
  },
  "Vpc01PublicSubnet2RouteTableF1877DF3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc01F824461A"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc/Vpc01/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PublicSubnet2/RouteTable"
   }
  },
  "Vpc01PublicSubnet2RouteTableAssociationAE879AA9": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "Vpc01PublicSubnet2RouteTableF1877DF3"
    },
    "SubnetId": {
     "Ref": "Vpc01PublicSubnet2Subnet7A06BCF4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PublicSubnet2/RouteTableAssociation"
   }
  },
  "Vpc01PublicSubnet2DefaultRoute88033A37": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "Vpc01PublicSubnet2RouteTableF1877DF3"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "Vpc01IGWE5584F53"
    }
   },
   "DependsOn": [
    "Vpc01VPCGWF44E95B8"
   ],
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PublicSubnet2/DefaultRoute"
   }
  },
  "Vpc01PublicSubnet2EIP007C998A": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc/Vpc01/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PublicSubnet2/EIP"
   }
  },
  "Vpc01PublicSubnet2NATGatewayB6FC88EC": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "Vpc01PublicSubnet2Subnet7A06BCF4"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "Vpc01PublicSubnet2EIP007C998A",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc/Vpc01/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "Vpc01PublicSubnet2DefaultRoute88033A37",
    "Vpc01PublicSubnet2RouteTableAssociationAE879AA9"
   ],
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PublicSubnet2/NATGateway"
   }
  },
  "Vpc01PrivateSubnet1SubnetAA8F14B1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc01F824461A"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "vpc/Vpc01/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PrivateSubnet1/Subnet"
   }
  },
  "Vpc01PrivateSubnet1RouteTableAD63F47A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc01F824461A"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc/Vpc01/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PrivateSubnet1/RouteTable"
   }
  },
  "Vpc01PrivateSubnet1RouteTableAssociationC4B059F6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "Vpc01PrivateSubnet1RouteTableAD63F47A"
    },
    "SubnetId": {
     "Ref": "Vpc01PrivateSubnet1SubnetAA8F14B1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "Vpc01PrivateSubnet1DefaultRouteFCFF198D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "Vpc01PrivateSubnet1RouteTableAD63F47A"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "Vpc01PublicSubnet1NATGatewayEDCD7D54"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PrivateSubnet1/DefaultRoute"
   }
  },
  "Vpc01PrivateSubnet2SubnetAF389DF0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc01F824461A"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "vpc/Vpc01/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PrivateSubnet2/Subnet"
   }
  },
  "Vpc01PrivateSubnet2RouteTableF2ABD421": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc01F824461A"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc/Vpc01/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PrivateSubnet2/RouteTable"
   }
  },
  "Vpc01PrivateSubnet2RouteTableAssociation2AC037D8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "Vpc01PrivateSubnet2RouteTableF2ABD421"
    },
    "SubnetId": {
     "Ref": "Vpc01PrivateSubnet2SubnetAF389DF0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "Vpc01PrivateSubnet2DefaultRoute3CFCF704": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "Vpc01PrivateSubnet2RouteTableF2ABD421"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "Vpc01PublicSubnet2NATGatewayB6FC88EC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/PrivateSubnet2/DefaultRoute"
   }
  },
  "Vpc01IGWE5584F53": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc/Vpc01"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/IGW"
   }
  },
  "Vpc01VPCGWF44E95B8": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "Vpc01F824461A"
    },
    "InternetGatewayId": {
     "Ref": "Vpc01IGWE5584F53"
    }
   },
   "Metadata": {
    "aws:cdk:path": "vpc/Vpc01/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/02OQQuCQBCFf4v3dUsPQUeRCDuEaHiNcZtoynbDnVVC/O9pVnZ63zweb14oV2u59KC1vjrd/IpK2eUM6iYG64gqlF3xUCI+6yKNRerKilTuSo08ejNlxjEeoKxw9mcvstYoAiajf+ERNkk6yh54C4wtPEVaUzPgXJxoxnrgb2Ba8rkiHqZe7qi5Fxla42r17v3n2OgTjZ97sYMGFkEglzIIvasl8munme4os0lf265HAg4BAAA="
   },
   "Metadata": {
    "aws:cdk:path": "vpc/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
